Fix alignment of login/register

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -65,8 +65,8 @@ body {
 .input-box form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 20px;
+    margin: 0 auto;
 }
 
 /* Have the feather icons position to be absolute relative to the div parent element (also to the right)*/
@@ -196,6 +196,7 @@ body {
 .slider button {
     width: 100px;
     height: 35px;
+    font-size: 0.9rem;
     background-color: var(--color5);
     color: var(--color2);
     border: 1px solid var(--color2);
@@ -291,6 +292,7 @@ body {
 
     .input-box input {
         width: 100%;
+        font-size: 0.9rem;
     }
 
     .input-box button, .input-box p { 
@@ -358,7 +360,7 @@ body {
     /* Welcome to Contacts Manager is seen at the beginning*/
     .welcome {
         left: 0;
-        bottom: 1255px;
+        bottom: 1300px;
         transition: bottom 1.5s ease-in-out, opacity 1s ease-in;
     }
     /* Welcome to Contacts Manager is moved to the left of the container (hidden due to containers' hidden overflow)*/
